--- a/CSS/style.css
+++ b/CSS/style.css
@@ -18,7 +18,7 @@ body {
     min-height: 100vh;
     background: rgb(90, 42, 42);
 
-    background-image: url(IMG/fundoPageLogin4.jpg);
+    background-image: url(/IMG/fundoPageLogin4.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -26,21 +26,6 @@ body {
 
 
 }
-
-/* .container {
-
-    width: 400px;
-    color: white;
-
-    padding: 30px 40px;
-    border-radius: 10px;
-
-    backdrop-filter: blur(5px);
-    box-shadow: 0px 0px 20px 0px rgba(255, 255, 255, 0.300);
-
-    border: 1px solid rgba(255, 255, 255, 0.300);
-
-} */
 
 .container  {
 
@@ -67,6 +52,7 @@ body {
     font-size: 36px;
     text-align: center;
 
+    color: white;
     /* border: 1px solid yellow; */
 
 }
@@ -189,11 +175,13 @@ body {
 
 }
 
-.container .div-criar-conta {
+.div-criar-conta {
 
     text-align: center;
     font-size: 15px;
     margin-top: 15px;
+
+    /* border: 1px solid yellow; */
 
 }
 
@@ -202,11 +190,5 @@ body {
     color: white;
     text-decoration: none;
     font-weight: 700;
-
-}
-
-.container .div-criar-conta a:hover {
-
-    text-decoration: underline;
 
 }
